Redesign of slow request simulation UI and implementation
